Criacao de segregacao de company e usuarios